# epanet-utils

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: EPANET_INPUT_FILE.md  GEOJSON_LAYERS.md
examples/example1/: example1.py
examples/example2/: example2.py
src/epanet_utils/: __init__.py  exports.py  inp.py  inp_decoder.py  inp_encoder.py  out.py  out_decoder.py  rpt.py  rpt_decoder.py
tests/: __init__.py  test_exports.py  test_inp.py  test_inp_decoder_encoder.py  test_out.py  test_rpt.py
